# dongle

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  build_macos.sh  dongle-pick.spec  dongle.spec  install.sh  plan.md  pubspec.yaml  pyproject.toml  setup.py  test_pt.py  test_tty.py
.github/workflows/: auto-release.yml  release.yml
.jules/: bolt.md
dongle/: cli.py  config.py  frecency.py  init_cmd.py  main.py  matcher.py  scanner.py  ui.py  utils.py
dongle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dongle/shell/: bash.sh  fish.fish  zsh.sh
lib/: app.dart
lib/src/: cli.dart  config.dart  frecency.dart  matcher.dart  scanner.dart  ui.dart
tests/: test_matcher.py
